--- a/assignments/week 9/home.html
+++ b/assignments/week 9/home.html
@@ -39,10 +39,7 @@
     </nav>
 
 
-
-
-
-
+           
 
 
 
@@ -77,5 +74,7 @@
     <script src="script/currentdate.js"></script>
     <script src="script/windchill.js"></script>
     <script src="script/stormcenter.js"></script>
+    <script src="home.json"></script>
+    
 </body>
 </html>
