--- a/assignments/week 9/home.html
+++ b/assignments/week 9/home.html
@@ -71,7 +71,7 @@
     <script src="script/currentdate.js"></script>
     <script src="script/windchill.js"></script>
     <script src="script/stormcenter.js"></script>
-    <script src="home.json"></script>
+    <script src="script/home.js"></script>
     
 </body>
 </html>
