--- a/assignments/week 9/superhero.html
+++ b/assignments/week 9/superhero.html
@@ -19,10 +19,8 @@
 
       </section>
 
-    <script>
-    var header = document.querySelector('header');
-    var section = document.querySelector('section');
-    var superheroes = document.querySelector('superheros');
+    <script src= "script/superhero.js">
+    
     </script>
   </body>
 </html>
