--- a/assignments/week 9/home.html
+++ b/assignments/week 9/home.html
@@ -36,12 +36,12 @@
             <li><a href="gallary-7.html">Gallery</a></li>
 
         </ul>
-    </nav>        
+    </nav>  
+    <main>
+        <section class= "home">
 
-
-
-
-
+        </section>
+    </main>      
 
 
 
