--- a/assignments/week 9/home.html
+++ b/assignments/week 9/home.html
@@ -41,6 +41,10 @@
         <section class= "home">
 
         </section>
+
+        <div class= 'homepage'>
+                        <img src="images/idahoflowerbird.jpg" alt="State Bird and Flower">
+        </div>
     </main>      
 
 
