--- a/assignments/week 9/home.html
+++ b/assignments/week 9/home.html
@@ -26,7 +26,7 @@
 
     <nav>
         <button onclick="toggleNavMenu()">☰</button>
-        <ul id="primaryNav">
+        <ul id="primaryNav" class="hide">
 
             <li class="active"><a href="home.html">Home</a></li>
             <li><a href="preston-7.html">Preston</a></li>
