--- a/assignments/week 10/home.html
+++ b/assignments/week 10/home.html
@@ -26,7 +26,7 @@
 
     <nav>
         <button onclick="toggleNavMenu()">☰</button>
-        <ul id="primaryNav">
+        <ul id="primaryNav" class="hide">
 
             <li class="active"><a href="home.html">Home</a></li>
             <li><a href="preston-7.html">Preston</a></li>
@@ -36,18 +36,16 @@
             <li><a href="gallary-7.html">Gallery</a></li>
 
         </ul>
-    </nav>
+    </nav>  
+    <main>
+        <section class= "home">
 
+        </section>
 
-
-
-
-
-
-
-
-
-
+        <div class= 'homepage'>
+                        <img src="images/idahoflowerbird.jpg" alt="State Bird and Flower">
+        </div>
+    </main>      
 
 
 
@@ -77,5 +75,7 @@
     <script src="script/currentdate.js"></script>
     <script src="script/windchill.js"></script>
     <script src="script/stormcenter.js"></script>
+    <script src="script/home.js"></script>
+    
 </body>
 </html>
