--- a/assignments/week 10/preston-7.html
+++ b/assignments/week 10/preston-7.html
@@ -118,5 +118,6 @@
 <script src="script/hamburger.js"></script> 
 <script src="script/currentdate.js"></script>
 <script src="script/windchill.js"></script>
+<script src="script/preston.js"></script>
 </body>
 </html>
