--- a/assignments/week 10/api-test.html
+++ b/assignments/week 10/api-test.html
@@ -8,7 +8,7 @@
 <body>
     <h1>OpenWeatherMap.org API Test</h1>
 
-    <p>The current temperature in Preson, Idaho is <span id="cc-temp"><</span>
+    <p>The current temperature in Preson, Idaho is <span id="cc-temp"></span>
     span>&deg; F 
     </p>
 
