--- a/assignments/week 10/api-test.html
+++ b/assignments/week 10/api-test.html
@@ -9,7 +9,7 @@
     <h1>OpenWeatherMap.org API Test</h1>
 
     <p>The current temperature in Preson, Idaho is <span id="cc-temp"></span>
-    span>&deg; F 
+    &deg; F 
     </p>
 
     <script src="js/weatherapi.js"></script>
