--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li>Lesson 7: <a href="assignments/week 7/preston-7.html">Preston 7</a> <a href="assignments/week 7/gallary-7.html">Gallary</a></li>
             <li>Lesson 8: <a href="assignments/week 8/stormcenter.html">Storm Center</a> <a href="assignments/week 8/tablebuild.html">Table</a></li>
             <li>Lesson 9: <a href="assignments/week 9/superhero.html">Superhero Activity</a> <a href="assignments/week 9/home.html">Home Page</a></li>
-            <li>Lesson 10: <a href=""></a></li>
+            <li>Lesson 10: <a href="assignments/week 10/api-test.html">Weather API Activity</a><a href="assignments/week 10/preston-7.html">Preston API</a></li>
         </ul>
     </main>
 
