--- a/assignments/week 10/api-test.html
+++ b/assignments/week 10/api-test.html
@@ -12,7 +12,7 @@
     &deg; F 
     </p>
 
-    <script src="js/weatherapi.js"></script>
+    <script src="script/weatherapi.js"></script>
         
 </body>
 </html>
