--- a/assignments/week 10/preston-7.html
+++ b/assignments/week 10/preston-7.html
@@ -43,9 +43,9 @@
 
             <div><h3>Weather Summary</h3>
             <ul class="weather">
-                  <li>Current Weather:Sunny</li>
-                  <li>High: <span id="highTemp">80</span>&deg;</li>
-                  <li>Wind Chill: <span id="windchill"></span>&deg;</li>
+                  <li>Current Weather <span id="weatherDesc"></span></li>
+                  <li>High: <span id="currentTemp"></span>&deg; F </li>
+                  <li>Wind Chill: <span id="windchill"></span>&deg; F </li>
                   <li>Humidity: <span id="humidity">12%</span>&deg;</li>
                   <li>Windspeed: <span id="windspeed">2mph</span>&deg;</li>
             </ul></div>
