--- a/assignments/week 10/preston-7.html
+++ b/assignments/week 10/preston-7.html
@@ -46,8 +46,8 @@
                   <li>Current Weather <span id="weatherDesc"></span></li>
                   <li>High: <span id="currentTemp"></span>&deg; F </li>
                   <li>Wind Chill: <span id="windchill"></span>&deg; F </li>
-                  <li>Humidity: <span id="humidity">12%</span>&deg;</li>
-                  <li>Windspeed: <span id="windspeed">2mph</span>&deg;</li>
+                  <li>Humidity: <span id="humidity"></span>&deg;</li>
+                  <li>Windspeed: <span id="windspeed"></span>&deg;</li>
             </ul></div>
             <div id="output"></div>
              
@@ -117,7 +117,6 @@
 </footer>
 <script src="script/hamburger.js"></script> 
 <script src="script/currentdate.js"></script>
-<script src="script/windchill.js"></script>
 <script src="script/preston.js"></script>
 </body>
 </html>
