--- a/assignments/weathersite/stormcenter.html
+++ b/assignments/weathersite/stormcenter.html
@@ -30,8 +30,8 @@
 
             <li><a href="home.html">Home</a></li>
             <li><a href="preston-7.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
+            <li><a href="sodasprings.html">Soda Springs</a></li>
+            <li><a href="fishhaven.html">Fish Haven</a></li>
             <li class="active"><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallary-7.html">Gallery</a></li>
 
