--- a/assignments/weathersite/fishhaven.html
+++ b/assignments/weathersite/fishhaven.html
@@ -29,9 +29,9 @@
         <ul id="primaryNav" class="hide">
 
             <li><a href="home.html">Home</a></li>
-            <li class="active"><a href="preston-7.html">Preston</a></li>
+            <li><a href="preston-7.html">Preston</a></li>
             <li><a href="sodasprings.html">Soda Springs</a></li>
-            <li><a href="fishhaven.html">Fish Haven</a></li>
+            <li class="active"><a href="fishhaven.html">Fish Haven</a></li>
             <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallary-7.html">Gallery</a></li>
 
@@ -39,9 +39,9 @@
     </nav>
     <main>
         <section class="hero">
-            <h1>Preston</h1>
-            <img class="myphoto" src="images/smallview.png" alt="Sunny Day in Preston Idaho" sizes="50vw" srcset="images/franklin200.jpg 400w,
-            images/franklin800.jpg 900w">
+            <h1>Fish Haven</h1>
+            <img class="myphoto" src="images/fishhavenmain.jpg" alt="Sunny Day in Fish Haven Idaho" sizes="50vw" srcset="images/fishhavenmain 400w,
+            images/fishhavenmain 900w">
 
             <div>
                 <h3>Weather Summary</h3>
