--- a/assignments/weathersite/home.html
+++ b/assignments/weathersite/home.html
@@ -43,7 +43,7 @@
         </section>
 
         <div class= 'homepage'>
-                        <img src="images/idahoflowerbird.jpg" alt="State Bird and Flower">
+                        <img src="images/idaho.jpg" alt="State Bird and Flower">
         </div>
     </main>      
 
