--- a/assignments/weathersite/preston-7.html
+++ b/assignments/weathersite/preston-7.html
@@ -61,7 +61,7 @@
         <aside class="events">
             <h2> Town Events</h2>
 
-            <img src="images/idaho.jpg" alt="Welcome to Preston">
+            <img src="images/prestonevents.jpg" alt="Welcome to Preston">
 
         </aside>
 
