--- a/assignments/weathersite/fishhaven.html
+++ b/assignments/weathersite/fishhaven.html
@@ -40,8 +40,8 @@
     <main>
         <section class="hero">
             <h1>Fish Haven</h1>
-            <img class="myphoto" src="images/fishhavenmain.jpg" alt="Sunny Day in Fish Haven Idaho" sizes="50vw" srcset="images/fishhavenmain 400w,
-            images/fishhavenmain 900w">
+            <img class="myphoto" src="images/fishhavenmain.jpg" alt="Sunny Day in Fish Haven Idaho" sizes="50vw" srcset="images/fishhavenmain.jpg 400w,
+            images/fishhavenmain.jpg 900w">
 
             <div>
                 <h3>Weather Summary</h3>
@@ -61,7 +61,7 @@
         <aside class="events">
             <h2> Town Events</h2>
 
-            <img src="images/idaho.jpg" alt="Welcome to Preston">
+            <img src="images/fishhavenevents.jpg" alt="Welcome to Fish Haven">
 
         </aside>
 
@@ -93,22 +93,13 @@
 
         <article>
             <h1>Current Weather Story</h1>
-            <img src="images/snow.jpeg" alt="Opps logo didn't load">
+            <img src="images/fishhavenstory.jpg" alt="Opps logo didn't load">
 
-            <p>Reported by Weather Channel: After dumping inches – feet, in some areas – of snow in two waves, Winter
-                Storm Lucian finally left the West on Wednesday.
-                But it pivoted into the Midwest, where it was doling out a second punch of wintry weather to areas that
-                already saw snow and ice days earlier. The winter storm has been blamed for three deaths – two in
-                Missouri and one in Kansas.
-                In Michigan, freezing rain knocked down trees and power lines, leaving more than 50,000 people without
-                power.
-                School districts canceled classes as far west as Salt Lake City and Flagstaff, Arizona, and as far east
-                as Detroit on Wednesday, a testament to how far-reaching the storm's impacts were. Officials urged
-                drivers to slow down and be extremely careful when traveling on roads slickened by Lucian's snow and
-                ice.
-                The storm also hit the Northwest hard Sunday and Monday, leaving unusually large snow accumulations in
-                the Seattle area. Roads were slippery and dangerous, and police reported dozens of spinouts and crashes
-                on Monday.
+            <p>February 2019 was the planet's fifth warmest February since record keeping began in 1880, said NOAA's National Centers for Environmental Information (NCEI) on Monday. According to NOAA, the only warmer Februries were in 2016, 2017, 2015, and 1998. NASA rated February 2019 as the third warmest February on record, behind only 2016 and 2017. Minor differences in rankings between NASA and NOAA can arise because of how they handle data-sparse regions such as the Arctic, where few surface weather stations exist. The Japan Meteorological Agency ranked February as the fourth warmest since 1891.
+
+                Global ocean temperatures during February 2019 were the second warmest on record, according to NOAA, while global land temperatures were only the fifteenth warmest on record, as the land readings were brought down by the widespread cold across North America. It was the second warmest February on record for the Southern Hemisphere. The December-through-February Northern Hemisphere winter was the sixth warmest on record, while the Southern Hemisphere December-through-February summer temperatures were the second warmest on record.
+                
+                Global satellite-measured temperatures in February 2019 for the lowest 8 km of the atmosphere were the fifth or fourth warmest in the 41-year record, according to the University of Alabama Huntsville (UAH) and RSS, respectively.
             </p>
         </article>
     </main>
