--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <li>Lesson 8: <a href="assignments/week 8/stormcenter.html">Storm Center</a> <a href="assignments/week 8/tablebuild.html">Table</a></li>
             <li>Lesson 9: <a href="assignments/week 9/superhero.html">Superhero Activity</a> <a href="assignments/week 9/home.html">Home Page</a></li>
             <li>Lesson 10: <a href="assignments/week 10/api-test.html">Weather API Activity</a><a href="assignments/week 10/preston-7.html">Preston API</a></li>
-            <li>Leson 11: <a href="assignments/weathersite/sodasprings.html">Soda Springs</a><br><a href="assignments/weathersite/fishhaven.html">Fish Haven</a></li>
+            <li>Leson 11: <a href="assignments/weathersite/sodasprings.html">Soda Springs</a>
+                <a href="assignments/weathersite/fishhaven.html">Fish Haven</a></li>
         </ul>
     </main>
 
