--- a/assignments/weathersite/home.html
+++ b/assignments/weathersite/home.html
@@ -36,16 +36,22 @@
             <li><a href="gallary-7.html">Gallery</a></li>
 
         </ul>
-    </nav>  
+    </nav>
     <main>
-        <section class= "home">
+        <div class='homepage'>
+            <img src="images/idaho.jpg" alt="Welcome">
+        </div>
+        <section class="home">
 
         </section>
 
-        <div class= 'homepage'>
-                        <img src="images/idaho.jpg" alt="State Bird and Flower">
-        </div>
-    </main>      
+        <p>Great Potatoes. Tasty Destinations.</p>
+        <img src="images/idahoflag.png" alt="State Seal">
+        <img src="images/idahoflowerbird.jpg" alt="State Bird and Flower">
+
+
+
+    </main>
 
 
 
@@ -76,6 +82,7 @@
     <script src="script/windchill.js"></script>
     <script src="script/stormcenter.js"></script>
     <script src="script/home.js"></script>
-    
+
 </body>
+
 </html>
