--- a/assignments/weathersite/fishhaven.html
+++ b/assignments/weathersite/fishhaven.html
@@ -128,7 +128,7 @@
     </footer>
     <script src="script/hamburger.js"></script>
     <script src="script/currentdate.js"></script>
-    <script src="script/preston.js"></script>
+    <script src="script/fishhaven.js"></script>
 </body>
 
 </html>
