--- a/assignments/weathersite/home.html
+++ b/assignments/weathersite/home.html
@@ -45,9 +45,10 @@
 
         </section>
 
-        <p>Great Potatoes. Tasty Destinations.</p>
+        <p class="great">Great Potatoes. Tasty Destinations.</p>
+        <img src="images/bluebird.jpg" alt="State Bird">
         <img src="images/idahoflag.png" alt="State Seal">
-        <img src="images/idahoflowerbird.jpg" alt="State Bird and Flower">
+        <img src="images/flower.jpg" alt="State Flower">
 
 
 
