--- a/assignments/weathersite/sodasprings.html
+++ b/assignments/weathersite/sodasprings.html
@@ -134,7 +134,7 @@
     </footer>
     <script src="script/hamburger.js"></script>
     <script src="script/currentdate.js"></script>
-    <script src="script/preston.js"></script>
+    <script src="script/sodaspring.js"></script>
 </body>
 
 </html>
