--- a/assignments/weathersite/thanks.html
+++ b/assignments/weathersite/thanks.html
@@ -37,9 +37,11 @@
 
         </ul>
     </nav>
-    <main>
+    <main> 
+        
         <div>
             <p>Thank you for your submission!</p>
+            <img id="storm" src="images/storm.png" alt="Thunder Storm">
         </div>
     </main>
 
