--- a/assignments/weathersite/sodasprings.html
+++ b/assignments/weathersite/sodasprings.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/small-8.css">
     <link rel="stylesheet" href="css/medium-8.css">
     <link rel="stylesheet" href="css/large-8.css">
-    <link rel="stylesheet" href="css/stormcenter-8.css">
+    
+    <link href="https://fonts.googleapis.com/css?family=Copse" rel="stylesheet">
 
     <title>Soda Springs | Weather in Idaho-</title>
 </head>
