--- a/assignments/weathersite/preston-7.html
+++ b/assignments/weathersite/preston-7.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en us">
+<html lang="en-us">
 
 <head>
 
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/small-8.css">
     <link rel="stylesheet" href="css/medium-8.css">
     <link rel="stylesheet" href="css/large-8.css">
-    <link rel="stylesheet" href="css/stormcenter-8.css">
+    
+    <link href="https://fonts.googleapis.com/css?family=Copse" rel="stylesheet">
 
     <title>Preston | Weather in Idaho-</title>
 </head>
@@ -79,11 +80,11 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><img src="images/sunny.png" id="weather_icon1" alt="Weather" icon><br>High <span id="day1temp"></span>&deg;F</td>
-                        <td><img src="images/sunny.png" id="weather_icon2" alt="Weather" icon><br>High <span id="day2temp"></span>&deg;F</td>
-                        <td><img src="images/sunny.png" id="weather_icon3" alt="Weather" icon><br>High <span id="day3temp"></span>&deg;F</td>
-                        <td><img src="images/sunny.png" id="weather_icon4" alt="Weather" icon><br>High <span id="day4temp"></span>&deg;F</td>
-                        <td><img src="images/sunny.png" id="weather_icon5" alt="Weather" icon><br>High <span id="day5temp"></span>&deg;F</td>
+                        <td><img src="images/sunny.png" id="weather_icon1" alt="Weather"><br>High <span id="day1temp"></span>&deg;F</td>
+                        <td><img src="images/sunny.png" id="weather_icon2" alt="Weather"><br>High <span id="day2temp"></span>&deg;F</td>
+                        <td><img src="images/sunny.png" id="weather_icon3" alt="Weather"><br>High <span id="day3temp"></span>&deg;F</td>
+                        <td><img src="images/sunny.png" id="weather_icon4" alt="Weather"><br>High <span id="day4temp"></span>&deg;F</td>
+                        <td><img src="images/sunny.png" id="weather_icon5" alt="Weather"><br>High <span id="day5temp"></span>&deg;F</td>
                     </tr>
                 </tbody>
             </table>
