--- a/assignments/weathersite/thanks.html
+++ b/assignments/weathersite/thanks.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/small-8.css">
     <link rel="stylesheet" href="css/medium-8.css">
     <link rel="stylesheet" href="css/large-8.css">
-    <link rel="stylesheet" href="css/stormcenter-8.css">
+    
+    <link href="https://fonts.googleapis.com/css?family=Copse" rel="stylesheet">
 
     <title>Storm Center | Weather in Idaho-</title>
 </head>
@@ -26,12 +27,12 @@
 
     <nav>
         <button onclick="toggleNavMenu()">☰</button>
-        <ul id="primaryNav">
+        <ul id="primaryNav" class="hide">
 
-            <li><a href="#">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li class="#"><a href="preston-7.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
+            <li><a href="sodasprings.html">Soda Springs</a></li>
+            <li><a href="fishhaven.html">Fish Haven</a></li>
             <li class="active"><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallary-7.html">Gallery</a></li>
 
