--- a/assignments/weathersite/sodasprings.html
+++ b/assignments/weathersite/sodasprings.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en us">
+<html lang="en-us">
 
 <head>
 
@@ -81,11 +81,11 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><img src="images/sunny.png" id="weather_icon1" alt="Weather" icon><br>High <span id="day1temp"></span>&deg;F</td>
-                        <td><img src="images/sunny.png" id="weather_icon2" alt="Weather" icon><br>High <span id="day2temp"></span>&deg;F</td>
-                        <td><img src="images/sunny.png" id="weather_icon3" alt="Weather" icon><br>High <span id="day3temp"></span>&deg;F</td>
-                        <td><img src="images/sunny.png" id="weather_icon4" alt="Weather" icon><br>High <span id="day4temp"></span>&deg;F</td>
-                        <td><img src="images/sunny.png" id="weather_icon5" alt="Weather" icon><br>High <span id="day5temp"></span>&deg;F</td>
+                        <td><img src="images/sunny.png" id="weather_icon1" alt="Weather"><br>High <span id="day1temp"></span>&deg;F</td>
+                        <td><img src="images/sunny.png" id="weather_icon2" alt="Weather"><br>High <span id="day2temp"></span>&deg;F</td>
+                        <td><img src="images/sunny.png" id="weather_icon3" alt="Weather"><br>High <span id="day3temp"></span>&deg;F</td>
+                        <td><img src="images/sunny.png" id="weather_icon4" alt="Weather"><br>High <span id="day4temp"></span>&deg;F</td>
+                        <td><img src="images/sunny.png" id="weather_icon5" alt="Weather"><br>High <span id="day5temp"></span>&deg;F</td>
                     </tr>
                 </tbody>
             </table>
