--- a/index.html
+++ b/index.html
@@ -29,16 +29,17 @@
             <li>Lesson 4: <a href="assignments/week 4/Website Planning.pdf">Website Planning Document</a></li>
             <li>Lesson 5: <a href="assignments/week 5/preston-5.html">Preston</a></li>
             <li>Lesson 6: <a href="assignments/week 6/preston-6.html">Optamizing</a></li>
-            <li>Lesson 7: <a href="assignments/week 7/preston-7.html">Preston 7</a> 
+            <li>Lesson 7: <a href="assignments/week 7/preston-7.html">Preston 7--</a> 
                 <a href="assignments/week 7/gallary-7.html">Gallary</a></li>
-            <li>Lesson 8: <a href="assignments/week 8/stormcenter.html">Storm Center</a> 
+            <li>Lesson 8: <a href="assignments/week 8/stormcenter.html">Storm Center--</a> 
                 <a href="assignments/week 8/tablebuild.html">Table</a></li>
-            <li>Lesson 9: <a href="assignments/week 9/superhero.html">Superhero Activity</a> 
+            <li>Lesson 9: <a href="assignments/week 9/superhero.html">Superhero Activity--</a> 
                 <a href="assignments/week 9/home.html">Home Page</a></li>
-            <li>Lesson 10: <a href="assignments/week 10/api-test.html">Weather API Activity</a>
+            <li>Lesson 10: <a href="assignments/week 10/api-test.html">Weather API Activity--</a>
                 <a href="assignments/week 10/preston-7.html">Preston API</a></li>
-            <li>Leson 11: <a href="assignments/weathersite/sodasprings.html">Soda Springs</a>
-                <a href="assignments/weathersite/fishhaven.html">Fish Haven</a></li>
+            <li>Leson 11: <a href="assignments/weathersite/sodasprings.html">Soda Springs--</a>
+                <a href="assignments/weathersite/fishhaven.html">Fish Haven--</a></li>
+                <a href="assignments/weathersite/Final Website Plan.pdf">Final Website Plan</a></li>
         </ul>
     </main>
 
